sas-core/main/default/objects/Exchange_Rate__c/Exchange_Rate__c.object-meta.xml
<CustomObject>
    <description>Daily exchange rates for currency conversion calculations</description>
    <label>Exchange Rate</label>
    <nameField>
        <label>Exchange Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>