sas-core/main/default/objects/Exchange_Rate__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date on which this exchange rate is valid</description>
    <inlineHelpText>Date on which this exchange rate is valid</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>