sas-core/main/default/objects/Exchange_Rate__c/fields/From_Currency__c.field-meta.xml
<CustomField>
    <fullName>From_Currency__c</fullName>
    <label>From Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>