sas-core/main/default/objects/Exchange_Rate__c/fields/To_Currency__c.field-meta.xml
<CustomField>
    <fullName>To_Currency__c</fullName>
    <label>To Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>